--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.etebarian:meow-bottom-navigation-java:1.2.0'
+    implementation 'com.plattysoft.leonids:LeonidsLib:1.3.2'
 }
